--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# No checkpoints folder for jupyter notebooks
+*.ipynb_checkpoints*
+
+# Data Files
+*.csv
+*.json
